[package]
name = "personal_website"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_log = "0.2"
log = "0.4"
leptos = { version = "0.1.0" }
leptos_router = { version = "0.1.0", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
futures = "0.3"
console_error_panic_hook = "0.1.7"
leptos_meta = { version = "0.1.0", features = ["csr"] }
stylist = { version = "0.11.0", features = ["macros", "parser"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
