[package]
name = "personal_website"
version = "0.1.0"
edition = "2021"

[dependencies]
console_log = "1.0.0"
log = "0.4.17"
leptos = { git = "https://github.com/leptos-rs/leptos" }
leptos_router = { git = "https://github.com/leptos-rs/leptos", features = [
    "csr",
] }
serde = { version = "1.0.160", features = ["derive"] }
futures = "0.3"
console_error_panic_hook = "0.1.7"
leptos_meta = { git = "https://github.com/leptos-rs/leptos", features = [
    "csr",
] }
stylist = { version = "0.12.0", features = ["macros", "parser"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
